--- a/Ascension/UnitTestProject1/AscensionTest.csproj
+++ b/Ascension/UnitTestProject1/AscensionTest.csproj
@@ -55,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="PlayerTest.cs" />
     <Compile Include="GameTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CardCollectionTest.cs" />
