--- a/Ascension/Ascension/Ascension.csproj
+++ b/Ascension/Ascension/Ascension.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Card.cs" />
     <Compile Include="CardAction.cs" />
     <Compile Include="CardCollection.cs" />
+    <Compile Include="CardsPlayed.cs" />
     <Compile Include="CenterRow.cs" />
     <Compile Include="ChangeMetricCount.cs" />
     <Compile Include="ConstructDeck.cs" />
@@ -91,6 +92,7 @@
       <DependentUpon>EndGameForm.cs</DependentUpon>
     </Compile>
     <Compile Include="FirstTimeGet.cs" />
+    <Compile Include="ForEachCardType.cs" />
     <Compile Include="HandDeck.cs" />
     <Compile Include="InHand.cs" />
     <Compile Include="InPlay.cs" />
