--- a/Ascension/UnitTestProject1/AscensionTest.csproj
+++ b/Ascension/UnitTestProject1/AscensionTest.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AILogicTest.cs" />
     <Compile Include="CardTest.cs" />
+    <Compile Include="CardImprortTest.cs" />
     <Compile Include="PlayerTest.cs" />
     <Compile Include="GameTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
