--- a/Ascension/UnitTestProject1/AscensionTest.csproj
+++ b/Ascension/UnitTestProject1/AscensionTest.csproj
@@ -56,6 +56,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AILogicTest.cs" />
+    <Compile Include="CardActionsTest.cs" />
     <Compile Include="CardTest.cs" />
     <Compile Include="CardImprortTest.cs" />
     <Compile Include="AITest.cs" />
