--- a/Ascension/Ascension/Ascension.csproj
+++ b/Ascension/Ascension/Ascension.csproj
@@ -124,6 +124,16 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>strings.resx</DependentUpon>
+    </Compile>
+    <Compile Include="strings_form3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>strings_form3.resx</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EndGameForm.resx">
       <DependentUpon>EndGameForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -145,6 +155,16 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="strings.fr.resx" />
+    <EmbeddedResource Include="strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="strings_form3.fr.resx" />
+    <EmbeddedResource Include="strings_form3.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>strings_form3.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -190,13 +210,24 @@
     <Content Include="CardSets\PlayerHand\militia.jpg" />
     <Content Include="CardSets\PlayerHand\militia.txt" />
     <Content Include="CardSets\PlayerHand\apprentice.txt" />
+    <Content Include="CardSets\Portal\AvatarGolem.jpg" />
+    <Content Include="CardSets\Portal\Demon-Slayer.jpg" />
+    <Content Include="CardSets\Portal\Lifebound-Initiate.jpg" />
+    <Content Include="CardSets\Portal\Master-Dhartha.jpg" />
+    <Content Include="CardSets\Portal\Runic-Lycanthrope.jpg" />
     <Content Include="CardSets\Portal\RunicLycanthrope.txt" />
+    <Content Include="CardSets\Portal\Samaels-Trickster.jpg" />
     <Content Include="CardSets\Portal\SamaelsTrickster.txt" />
+    <Content Include="CardSets\Portal\The-All-Seeing-Eye.jpg" />
+    <Content Include="CardSets\Portal\The-Grand-Design.jpg" />
+    <Content Include="CardSets\Portal\Tormented-Soul.jpg" />
     <Content Include="CardSets\Portal\TormentedSoul.txt" />
     <Content Include="CardSets\Portal\AvatarGolem.txt" />
     <Content Include="CardSets\Portal\LifeboundInitiate.txt" />
     <Content Include="CardSets\Portal\DemonSlayer.txt" />
     <Content Include="CardSets\Portal\MasterDhartha.txt" />
+    <Content Include="CardSets\Portal\Voidthirster.jpg" />
+    <Content Include="CardSets\Portal\Yggdrasil-Staff.jpg" />
     <Content Include="CardSets\Portal\YggdrasilStaff.txt" />
     <Content Include="CardSets\Portal\TheGrandDesign.txt" />
     <Content Include="CardSets\Portal\TheAllSeeingEye.txt" />
