--- a/Ascension/Ascension/Ascension.csproj
+++ b/Ascension/Ascension/Ascension.csproj
@@ -100,6 +100,12 @@
     <Compile Include="InHand.cs" />
     <Compile Include="InPlay.cs" />
     <Compile Include="MoveFromTo.cs" />
+    <Compile Include="OptionalPlay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OptionalPlay.Designer.cs">
+      <DependentUpon>OptionalPlay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Shuffleable.cs" />
     <Compile Include="PortalDeck.cs" />
     <Compile Include="Form2.cs">
@@ -145,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptionalPlay.resx">
+      <DependentUpon>OptionalPlay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
