--- a/Ascension/Ascension/Ascension.csproj
+++ b/Ascension/Ascension/Ascension.csproj
@@ -86,6 +86,12 @@
     <Compile Include="CenterRow.cs" />
     <Compile Include="ChangeMetricCount.cs" />
     <Compile Include="CardImport.cs" />
+    <Compile Include="ChoiceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChoiceForm.Designer.cs">
+      <DependentUpon>ChoiceForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConstructDeck.cs" />
     <Compile Include="DiscardDeck.cs" />
     <Compile Include="DiscardsToDeck.cs" />
@@ -101,12 +107,6 @@
     <Compile Include="InHand.cs" />
     <Compile Include="InPlay.cs" />
     <Compile Include="MoveFromTo.cs" />
-    <Compile Include="OptionalPlay.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="OptionalPlay.Designer.cs">
-      <DependentUpon>OptionalPlay.cs</DependentUpon>
-    </Compile>
     <Compile Include="Shuffleable.cs" />
     <Compile Include="PortalDeck.cs" />
     <Compile Include="Form2.cs">
@@ -141,6 +141,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>strings_form3.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ChoiceForm.resx">
+      <DependentUpon>ChoiceForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EndGameForm.resx">
       <DependentUpon>EndGameForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -152,9 +155,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="OptionalPlay.resx">
-      <DependentUpon>OptionalPlay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -220,9 +220,17 @@
     <Content Include="CardSets\PlayerHand\militia.jpg" />
     <Content Include="CardSets\PlayerHand\militia.txt" />
     <Content Include="CardSets\PlayerHand\apprentice.txt" />
+    <Content Include="CardSets\Portal\Arha-Initiate.jpg" />
+    <Content Include="CardSets\Portal\ArhaInitiate.txt" />
+    <Content Include="CardSets\Portal\Ascetic-of-the-Lidless-Eye.jpg" />
+    <Content Include="CardSets\Portal\AsceticOfTheLidlessEye.txt" />
     <Content Include="CardSets\Portal\AvatarGolem.jpg" />
     <Content Include="CardSets\Portal\Demon-Slayer.jpg" />
+    <Content Include="CardSets\Portal\Earth-Tyrant.jpg" />
+    <Content Include="CardSets\Portal\EarthTyrant.txt" />
     <Content Include="CardSets\Portal\Emri.txt" />
+    <Content Include="CardSets\Portal\Flytrap-Witch.jpg" />
+    <Content Include="CardSets\Portal\Flytrap-Witch.txt" />
     <Content Include="CardSets\Portal\Landtalker.jpg" />
     <Content Include="CardSets\Portal\Landtalker.txt" />
     <Content Include="CardSets\Portal\Lifebound-Initiate.jpg" />
@@ -237,6 +245,8 @@
     <Content Include="CardSets\Portal\ShadowStar.txt" />
     <Content Include="CardSets\Portal\Snapdragon.jpg" />
     <Content Include="CardSets\Portal\Snapdragon.txt" />
+    <Content Include="CardSets\Portal\Spike-Vixen.jpg" />
+    <Content Include="CardSets\Portal\SpikeVixen.txt" />
     <Content Include="CardSets\Portal\The-All-Seeing-Eye.jpg" />
     <Content Include="CardSets\Portal\The-Grand-Design.jpg" />
     <Content Include="CardSets\Portal\Tormented-Soul.jpg" />
@@ -248,10 +258,12 @@
     <Content Include="CardSets\Portal\Voidthirster.jpg" />
     <Content Include="CardSets\Portal\Watchmakers-Altar.jpg" />
     <Content Include="CardSets\Portal\WatchmakersAltar.txt" />
+    <Content Include="CardSets\Portal\Wolf-Shaman.jpg" />
+    <Content Include="CardSets\Portal\WolfShaman.txt" />
     <Content Include="CardSets\Portal\Yggdrasil-Staff.jpg" />
     <Content Include="CardSets\Portal\YggdrasilStaff.txt" />
     <Content Include="CardSets\Portal\TheGrandDesign.txt" />
-    <Content Include="CardSets\Portal\TheAllSeeingEye.txt" />
+    <Content Include="CardSets\Portal\AllSeeingEye.txt" />
     <Content Include="CardSets\Portal\VoidThirster.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
